# servers

./: .gitignore  package-lock.json
mem0/: README.md  package.json
mem0/src/: index.ts
src/jira/: README.md  package.json
src/jira/src/: index.ts  mcp-types.ts  resourceHandlers.ts  toolHandlers.ts  types.ts
src/mem0/: README.md  pyproject.toml
src/mem0/src/mem0/: server.py
