[project]
name = "mem0"
version = "0.1.0"
description = " Store agent and user interaction memory and history in mem0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "httpx>=0.27.2",
 "mcp>=1.0.0",
 "python-dotenv>=1.0.1",
]
[[project.authors]]
name = "Basit Mustafa"
email = "basit.mustafa@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
mem0 = "mem0:main"
